chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: beanie-kiosk-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "fireshellstudio.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: beanie-kiosk-service
          servicePort: 3000
